[metadata]
name = O_Seive
version = 0.0.1
author = Karthik Devalla
author_email = ihatecoding666@gmail.com
description = This pacakge implements a 3D projection-based outlier detection algorithm using median-derived distance thresholds.
long_description = file: README.md
long_description_content_type = text/markdown
#url = GITHUB REPOSITORY LINK
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.10
include_package_data = True